--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,55 +3,154 @@
 }
 
 html {
-  font-size: 100%; /* 16 px */
+  font-size: 100%;
   font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
-  box-sizing: border-box;
   width: 100%;
   margin: 0px;
   padding: 0px;
 }
 
-/* Navigation starts here */
-  .navigation_header {
-    display: flex;
-    max-width: 100%;
-    background-color: 256, 256, 256, 0.7; /* Opacity */
-    opacity: 65%;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    margin: 0;
-    position: fixed;
-    top: 0;
-  }
-  .navigation_header nav ul {
-    list-style-image: none;
-  }
-  .navigation_header nav ul li.j_logo {
-    margin-right: 20rem;
-  }
-  .navigation_header nav ul li {
-    display: flex;
-    flex-flow: row;
-    border-bottom-width: 1rem;
-    border-bottom-color: black;
-    margin-right: 7rem;
-  }
-  .navigation_header nav ul li {
+h1 {
+  font-weight: 450;
+  font-size: 2.5rem;
+}
 
+/* Navigation starts here */
+
+  @media screen and (min-width: 768px){
+    .navigation_header {
+      display: grid;
+      grid-template-columns: .33fr .66fr;
+      grid-template-areas: 'logo links';
+      align-items: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: rgba(255, 255, 255, .6);
+      height: 10%;
+    }
+
+    .navigation_header .logo {
+      display: flex;
+      justify-content: center;
+    }
+
+    .navigation_header .links {
+      display: flex;
+      justify-content: space-around;
+      grid-area: links;
+    }
   }
-  .navigation_header nav ul li a {
-    font-family: helvetica;
+
+  @media screen and (min-width: 960px){
+    .navigation_header {
+      height: 15%;
+    }
+  }
+
+  .navigation_header .logo p.j_logo {
+    font-size: 2rem;
+    font-weight: 800;
+  }
+
+    .navigation_header .links a {
+      font-family: helvetica;
+      font-weight: 700;
+      font: 1rem;
+      color: black;
+      text-decoration: none;
+      padding-bottom: .7rem;
+    }
+
+    .navigation_header a:hover {
+      border-bottom-width: .5rem;
+      border-bottom-color: black;
+      border-bottom-style: solid;
+    }
+/* Navigation ends here */
+
+
+/* Portfolio starts here */
+  .portfolio_section {
+    margin-top: 15%;
+  }
+
+  #graffiti_tree {
+    background-color: black;
+    color: white;
+  }
+/* Porfolio ends here */
+
+
+/* About starts here */
+  #about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  @media screen and (min-width: 768px) {
+    #about {
+      margin: 10%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    #about #jasper_image {
+
+    }
+
+    #about #about_bio p {
+      margin-left: 10%;
+
+    }
+  }
+
+  @media screen and (min-width: 960px) {
+    #about {
+        margin-top: 15%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 'jasper_image about_bio';
+        margin-left: 10%;
+        margin-right: 10%;
+      }
+
+      #jasper_image {
+        grid-area: jasper_image;
+      }
+
+      #about_bio {
+        grid-area: about_bio;
+        display: flex;
+        flex-direction: column;
+      }
+  }
+/* About ends here */
+
+
+/* Contact starts here */
+/* Contact ends here */
+
+
+/* Index starts here */
+/* Index ends here */
+
+/* footer starts here */
+  .footer {
+    margin-top: 2rem;
+    border-top: .25rem solid black;
+  }
+
+  .footer .navigation_footer a {
     font-weight: 700;
     font: 1rem;
     color: black;
     text-decoration: none;
-    border-bottom-width: 5rem;
-    border-bottom-color: black;
+    padding-bottom: .7rem;
   }
-  .navigation_header a:hover {
-    border-bottom-width: 0;
-  }
-/* Navigation ends here */
+
+/* footer ends here */
