--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,14 +13,49 @@ body {
   padding: 0px;
 }
 
+@media print {
+ body > *:not(main) {
+ display: none;
+ }
+}
+
 h1 {
   font-weight: 450;
   font-size: 2.5rem;
 }
 
-/* Navigation starts here */
+h2 {
+  font-weight: 300;
+}
 
-  @media screen and (min-width: 768px){
+p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+/* Navigation starts here */
+  .navigation_header {
+    background-color: rgba(255, 255, 255, .6);
+  }
+
+  .navigation_header .links a {
+    font-family: helvetica;
+    font-weight: 700;
+    font: 1rem;
+    color: black;
+    text-decoration: none;
+    padding-bottom: .7rem;
+  }
+
+  .navigation_header .links a:hover {
+
+  }
+
+  .navigation_header .links a:focus {
+
+  }
+
+  @media screen and (min-width: 768px){ /* Tablet */
     .navigation_header {
       display: grid;
       grid-template-columns: .33fr .66fr;
@@ -29,7 +64,6 @@ h1 {
       position: fixed;
       top: 0;
       width: 100%;
-      background-color: rgba(255, 255, 255, .6);
       height: 10%;
     }
 
@@ -45,7 +79,7 @@ h1 {
     }
   }
 
-  @media screen and (min-width: 960px){
+  @media screen and (min-width: 960px){ /* Computer */
     .navigation_header {
       height: 15%;
     }
@@ -74,13 +108,30 @@ h1 {
 
 
 /* Portfolio starts here */
-  .portfolio_section {
-    margin-top: 15%;
+  #userinterface {
+    background-color: rgba(235, 36, 26, 0.5);
+    color: white;
   }
 
   #graffiti_tree {
     background-color: black;
     color: white;
+  }
+
+  .portfolio_section {
+    padding: 5% 5%;
+  }
+
+  @media screen and (min-width: 768px) {
+    .portfolio_section {
+      padding: 10% 10%;
+    }
+  }
+
+  @media screen and (min-width: 960px) {
+    .portfolio_section {
+      padding: 10% 5%;
+    }
   }
 /* Porfolio ends here */
 
@@ -133,11 +184,15 @@ h1 {
 
 
 /* Contact starts here */
+  @media screen and (min-width: 768) {
+
+  }
+
+  @media screen and (min-width: 960)
+
+  }
 /* Contact ends here */
 
-
-/* Index starts here */
-/* Index ends here */
 
 /* footer starts here */
   .footer {
